--- a/3HNM BANK/Login.html
+++ b/3HNM BANK/Login.html
@@ -21,13 +21,75 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+    <title>Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
+            padding: 20px;
         }
+
+        h2 {
+            text-align: center;
+        }
+
+        form {
+            max-width: 350px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="tel"],
+        input[type="date"],
+        input[type="password"],
+        input[type="number"] {
+            width: 90%;
+            padding: 8px;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="button"] {
+            width: 90%;
+            background-color: #4caf50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-left: 20px;
+            margin-top: 20px;
+        }
+
+        input[type="button"]:hover {
+            background-color: #45a049;
+        }
+
+        .Back-buttons {
+            margin-top: 20px;
+            align-items: center;
+            position: relative;
+            text-align: center;
+        }
+
+        a:visited {
+            color: rgb(44, 44, 188);
+        }
+    </style>
     </style>
 </head>
 
@@ -61,10 +123,16 @@
             <div>
                 <input type="button" id="submitbtn" value="Login" onclick="loginredirect()">
             </div>
+            <div class="Back-buttons">
+                <a type="button" href="Registration.html"> Register </a> <br><br>
+                <a type="button" href="index.html"> Back To Home Page </a> <br>
+            </div>
         </form>
+
     </div>
 
     </form>
+
     </div>
 </body>
 
