Updated the Reminder table

--- a/3HNM BANK/View Reminders.html
+++ b/3HNM BANK/View Reminders.html
@@ -27,6 +27,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="User.js"></script>
     <title>Reminders</title>
 </head>
 
@@ -96,7 +97,37 @@
                         </tr>
                         <tr class="child_row">
                             <td><a>Amount: 300</a></td>
-                            <td><a>Due: 1/6/2023</a></td>
+                            <td><a>Due: 6/6/2023</a></td>
+                        </tr>
+
+                        <tr class="parent_row">
+                            <td> <input type="checkbox" id="gas-bill">
+                                Water bill</td>
+                            <td> </td>
+                        </tr>
+                        <tr class="child_row">
+                            <td><a>Amount: 349</a></td>
+                            <td><a>Due: 5/6/2023</a></td>
+                        </tr>
+
+                        <tr class="parent_row">
+                            <td> <input type="checkbox" id="gas-bill">
+                                Telephone bill</td>
+                            <td> </td>
+                        </tr>
+                        <tr class="child_row">
+                            <td><a>Amount: 123</a></td>
+                            <td><a>Due: 5/6/2023</a></td>
+                        </tr>
+
+                        <tr class="parent_row">
+                            <td> <input type="checkbox" id="gas-bill">
+                                Electricity bill</td>
+                            <td> </td>
+                        </tr>
+                        <tr class="child_row">
+                            <td><a>Amount: 1000</a></td>
+                            <td><a>Due: 5/6/2023</a></td>
                         </tr>
 
                         <tr class="parent_row">
@@ -156,6 +187,8 @@
         $('.sidebar ul li').click(function () {
             $(this).addClass("active").siblings().removeClass("active");
         })
+
+
     </script>
 </body>
 
