--- a/3HNM BANK/gas bill.html
+++ b/3HNM BANK/gas bill.html
@@ -10,9 +10,6 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-
-    <title>Dashboard</title>
-
     <!-- slider stylesheet -->
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css"
@@ -30,17 +27,24 @@
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="User.js"></script>
     <title>Gas Bill Receipt</title>
     <style>
         th,
         td {
             padding: 8px;
-            text-align: left;
+            text-align: center;
             border-bottom: 1px solid #ddd;
         }
 
         th {
             background-color: #cbd5cb;
+        }
+
+        #rembutton {
+            padding: 0;
+            text-align: center;
+            margin-left: 0;
         }
     </style>
 </head>
@@ -92,7 +96,8 @@
                         <li><a href="#">View Reminders</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Notifications</a></li>
+                <li><a href="Notifications.html">Notifications</a></li>
+                <li><a href="Announcements.html">Notifications</a></li>
                 <li><a href="#">Help</a></li>
             </ul>
         </div>
@@ -111,12 +116,14 @@
                         <th>Description</th>
                         <th>Due Date</th>
                         <th>Amount</th>
+                        <th> </th>
                     </tr>
                     <tr>
                         <td>1</td>
                         <td>Charges of the month</td>
                         <td>June, 6th</td>
                         <td>300</td>
+                        <td id="rembutton"><input type="button" value="Set Reminder" onclick="setReminder()"></td>
                     </tr>
                     <tr>
                         <td>2</td>
