--- a/3HNM BANK/index.html
+++ b/3HNM BANK/index.html
@@ -13,12 +13,10 @@
   <meta name="author" content="" />
 
   <title>Cryptop</title>
-
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -49,22 +47,11 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link" href="about.html"> About </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="how.html"> How </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span>Wallet</span> <img src="images/wallet.png" alt="" />
-                  </a>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Registration.html"> Sign Up</a>
+                  <a class="nav-link" href="Registration.html"> Register </a>
                 </li>
               </ul>
               <div class="user_option">
@@ -83,10 +70,10 @@
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <!-- <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li> -->
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -96,143 +83,17 @@
                   <div class="col-md-7">
                     <div class="detail-box">
                       <div>
-                        <h1>
+                        <h1 style="color: transparent;">
                           Digital Currency
                         </h1>
-                        <h2>
+                        <h2 style=" color: transparent;">
                           The Future of Trading.
                         </h2>
-                        <div class="">
-                          <a href="">
-                            Get Started
-                          </a>
-                        </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-5">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="box">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <div>
-                        <h1>
-                          Digital Currency
-                        </h1>
-                        <h2>
-                          The Future of Trading.
-                        </h2>
-                        <div class="">
-                          <a href="">
-                            Get Started
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="box">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <div>
-                        <h1>
-                          Digital Currency
-                        </h1>
-                        <h2>
-                          The Future of Trading.
-                        </h2>
-                        <div class="">
-                          <a href="">
-                            Get Started
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="box">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <div>
-                        <h1>
-                          Digital Currency
-                        </h1>
-                        <h2>
-                          The Future of Trading.
-                        </h2>
-                        <div class="">
-                          <a href="">
-                            Get Started
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="box">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <div>
-                        <h1>
-                          Digital Currency
-                        </h1>
-                        <h2>
-                          The Future of Trading.
-                        </h2>
-                        <div class="">
-                          <a href="">
-                            Get Started
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
+                    <div class="height-box">
                     </div>
                   </div>
                 </div>
@@ -241,8 +102,9 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- end slider section -->
+  </div>
+  </section>
+  <!-- end slider section -->
   </div>
 
   <!-- how section -->
@@ -389,142 +251,6 @@
     </div>
   </section>
   <!-- end about section -->
-
-  <!-- app section -->
-
-  <section class="app_section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="detail-box">
-            <h2>
-              Our Powerful app to connect it all
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam
-            </p>
-            <div class="download_box">
-              <h5>
-                Download Now
-              </h5>
-              <div class="btn-box">
-                <a href="">
-                  <img src="images/app-store.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/play-store.png" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end app section -->
-
-
-  <!-- auto section -->
-
-  <section class="auto_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Start Automatic Now
-        </h2>
-      </div>
-      <div class="box">
-        <div class="img-box">
-          <img src="images/auto-img.png" alt="">
-        </div>
-        <div class="detail-box">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim
-          </p>
-          <div class="btn-box">
-            <a href="">
-              Register Now
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end auto section -->
-
-  <!-- client section -->
-
-  <section class="client_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Testimonial
-        </h2>
-      </div>
-      <div class="box">
-        <div class="b-1">
-          <div class="client_id">
-            <div class="img-box">
-              <img src="images/client-1.jpg" alt="">
-            </div>
-            <div class="name">
-              <h5>
-                Readable
-              </h5>
-              <h6>
-                Content of a page
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="client_detail">
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
-          </p>
-        </div>
-      </div>
-      <div class="box">
-        <div class="client_id">
-          <div class="img-box">
-            <img src="images/client-2.jpg" alt="">
-          </div>
-          <div class="name">
-            <h5>
-              Readable
-            </h5>
-            <h6>
-              Content of a page
-            </h6>
-          </div>
-        </div>
-        <div class="client_detail">
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
-          </p>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- end client section -->
 
   <!-- info section -->
   <section class="info_section layout_padding">
