Added the credit card application section

--- a/3HNM BANK/Credit Card.html
+++ b/3HNM BANK/Credit Card.html
@@ -164,6 +164,30 @@
                         </tr>
                         <!-- Add more rows as needed -->
                     </table>
+                    <div class="boxheader">
+                        <h3>Credit Card Application</h3>
+                        <div class="credit-app">
+                            <button id="applycredit" onclick="creditapplication()"> Apply for A new Credit Card
+                            </button>
+                            <div id="credit-card">
+                                <div class="credit-words">
+                                    <p> National ID </p>
+                                    <p> Address </p>
+                                    <p> Income source </p>
+                                    <p> Monthly Expense </p>
+                                    <p> Vehicle Info</p>
+                                </div>
+                                <div class="credit-inputs">
+                                    <input class="loan" type="number" required> <br>
+                                    <input class="loan" type="text" required> <br>
+                                    <input class="loan" type="text" required> <br>
+                                    <input class="loan" type="number" required> <br>
+                                    <input class="loan" type="text" required> <br>
+                                    <button id="creditsubmit" onclick="creditsubmit()"> Submit </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -213,18 +237,8 @@
                         Amount: 2,000
                         <button class="pay"> Pay Now</button>
                     </div>
-
                 </div>
-
             </div>
-
-            <div class="credit-side">
-
-                <button> Apply for A new Credit Card </button>
-
-                <!-- Apply for new credit card content here -->
-            </div>
-
         </div>
     </div>
     </div>
@@ -319,6 +333,19 @@
                 alert("Replacement for the reported credit card has been requested!")
             else
                 alert("please enter a credit card number");
+        }
+
+        function creditapplication() {
+            $("#credit-card").addClass("active")
+        }
+
+        function creditsubmit() {
+            let valid = true;
+            $('[required]').each(function () {
+                if ($(this).is(':invalid') || !$(this).val()) valid = false;
+            })
+            if (!valid) alert("Please fill all fields");
+            else alert('Credit Card Application Sent Successfuly');
         }
     </script>
 </body>
