Open/ close account and registration form are done

--- a/3HNM BANK/hagar.html
+++ b/3HNM BANK/hagar.html
@@ -178,7 +178,7 @@
                                 <tr>
                                     <td> Savings </td>
                                     <td> 75920238529</td>
-                                    <td> Halla Mohamed </td>
+                                    <td> Hagar Hani </td>
                                     <td> 1,000 </td>
                                 </tr>
                             </table>
