--- a/3HNM BANK/Internal Transfer.html
+++ b/3HNM BANK/Internal Transfer.html
@@ -30,6 +30,8 @@
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="User.js"></script>
+
     <title>Internal Transfer</title>
     <style>
         body {
@@ -50,6 +52,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
             padding: 20px;
+            margin-top: 5%;
         }
 
         .form-group {
@@ -144,16 +147,6 @@
                         <input type="date" id="transferDate" name="transferDate" required>
                     </div>
                     <div class="form-group">
-                        <label for="transferFrom">Transfer From Account:</label>
-                        <select id="transferFrom" name="transferFrom" required>
-                            <option value="">Select Account</option>
-                            <option value="account1">Account 1</option>
-                            <option value="account2">Account 2</option>
-                            <option value="account3">Account 3</option>
-                        </select>
-                    </div>
-                    <h3>Transfer Information</h3>
-                    <div class="form-group">
                         <label for="accountNumber">Account Number:</label>
                         <input type="text" id="accountNumber" name="accountNumber" required>
                     </div>
@@ -169,10 +162,10 @@
                         <label for="transferDescription">Transfer Description:</label>
                         <textarea id="transferDescription" name="transferDescription" required></textarea>
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Transfer">
-                    </div>
                 </form>
+                <div class="form-group">
+                    <input type="button" value="Transfer" onclick="transfer()">
+                </div>
             </div>
         </div>
         <div class="footer">Hi</div>
