--- a/3HNM BANK/Login.html
+++ b/3HNM BANK/Login.html
@@ -21,6 +21,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+    <script src="User.js"></script>
     <title>Login Page</title>
     <style>
         body {
@@ -95,7 +96,7 @@
 
 <body>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         function loginredirect() {
             var username = document.getElementById("username").value;
             var password = document.getElementById("password").value;
@@ -108,7 +109,7 @@
                 alert("Incorrect Username or Password")
             }
         }
-    </script>
+    </script> -->
     <div class="logincontainer">
         <h2 class="l">Login</h2>
         <form>
