--- a/3HNM BANK/Registration.html
+++ b/3HNM BANK/Registration.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <script src="User.js"></script>
     <title>Online Banking Registration</title>
     <style>
         body {
@@ -118,7 +119,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
 
-        <input type="button" value="Register" onclick="window.location.assign('Login.html')">
+        <input type="button" value="Register" onclick="Register()">
 
         <div class="Back-buttons">
             <a type="button" href="Login.html"> Login </a> <br><br>
