--- a/3HNM BANK/index.html
+++ b/3HNM BANK/index.html
@@ -24,8 +24,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
+  <link href="css/style1.css" rel="stylesheet" />
+
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="User.js"></script>
 </head>
 
 <body>
@@ -54,11 +57,7 @@
                   <a class="nav-link" href="Registration.html"> Register </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
+
             </div>
           </div>
         </nav>
@@ -119,7 +118,7 @@
         <div class="img-box">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1"
             x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"
-            width="512" height="512">
+            width="512" height="512" onclick="window.location.assign('Open Account.html')">
             <g>
               <path
                 d="M426.674,216.389c-0.002-1.379-0.004-2.631-0.004-3.059C426.67,95.51,331.15,0,213.33,0C95.51,0,0,95.51,0,213.33   s95.51,213.34,213.33,213.34c0.321,0,1.527,0.001,3.058,0.003C242.249,477.32,294.917,512,355.688,512   C442.017,512,512,442.017,512,355.688C512,294.918,477.321,242.25,426.674,216.389z M312.565,198.33   c-1.021-31.76-5.29-61.603-12.102-88.021c17.098-4.457,34.222-10.236,51.219-17.272c25.82,29.599,41.23,66.198,44.375,105.293    M327.876,70.176c-12.086,4.518-24.203,8.335-36.289,11.434c-5.954-16.226-12.985-30.55-20.86-42.488   C291.374,45.902,310.688,56.37,327.876,70.176z M170.18,75.197c12.987-27.821,29.523-45.104,43.155-45.104   s30.168,17.283,43.156,45.104c1.876,4.02,3.658,8.231,5.352,12.597c-32.186,5.123-64.813,5.124-97.014,0   C166.522,83.428,168.303,79.217,170.18,75.197z M213.341,121.646c18.139,0,36.28-1.463,54.288-4.389   c1.152-0.187,2.306-0.39,3.46-0.589c6.475,24.82,10.438,52.799,11.458,81.662H144.124c1.019-28.864,4.982-56.845,11.458-81.665   c1.152,0.199,2.303,0.405,3.454,0.591C177.056,120.183,195.197,121.646,213.341,121.646z M155.945,39.119   c-7.877,11.939-14.909,26.266-20.864,42.494c-12.079-3.098-24.192-6.921-36.286-11.441   C115.981,56.366,135.297,45.897,155.945,39.119z M74.986,93.039c17.018,7.041,34.136,12.804,51.224,17.259   c-6.813,26.421-11.083,56.267-12.105,88.032H30.612C33.758,159.236,49.167,122.638,74.986,93.039z M30.612,228.33h83.501   c1.041,31.763,5.339,61.594,12.171,87.999c-0.001,0-0.003,0.001-0.004,0.001c-17.117,4.459-34.264,10.238-51.301,17.297   C49.165,304.022,33.758,267.423,30.612,228.33z M98.781,356.482c12.133-4.536,24.286-8.364,36.399-11.472   c0.003-0.001,0.006-0.001,0.009-0.002c5.997,16.291,13.073,30.673,21.009,42.623C135.448,380.853,116.042,370.35,98.781,356.482z    M155.65,309.96c-6.492-24.801-10.476-52.77-11.515-81.63l120.683,0.162c-26.274,18.804-46.479,45.544-57.11,76.719   c-15.447,0.469-34.298,1.859-48.668,4.189C157.91,309.58,156.78,309.77,155.65,309.96z M170.18,351.178   c-1.839-3.939-3.59-8.056-5.253-12.327c0.001,0,0.002,0,0.003,0c10.132-1.608,24.351-2.703,35.732-3.296   c-0.848,6.592-1.287,13.311-1.287,20.134c0,13.254,1.656,26.121,4.761,38.41C192.872,388.206,180.159,372.554,170.18,351.178z    M445.004,445.004C421.147,468.861,389.427,482,355.688,482s-65.459-13.139-89.316-36.996   c-23.857-23.857-36.996-55.577-36.996-89.316s13.139-65.459,36.996-89.316c23.857-23.857,55.577-36.996,89.316-36.996   s65.459,13.139,89.316,36.996C468.861,290.228,482,321.948,482,355.688S468.861,421.147,445.004,445.004z" />
@@ -137,7 +136,7 @@
       <div class="box">
         <div class="img-box">
           <svg id="Capa_1" enable-background="new 0 0 510 510" height="512" viewBox="0 0 510 510" width="512"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg" onclick="window.location.assign('Close Account.html')">
             <path
               d="m465 21.125h-420c-24.813 0-45 20.187-45 45v275.5c0 24.813 20.187 45 45 45h152.393l-6.049 72.25h-33.344c-8.284 0-15 6.716-15 15s6.716 15 15 15h194c8.284 0 15-6.716 15-15s-6.716-15-15-15h-33.343l-6.049-72.25h152.392c24.813 0 45-20.187 45-45v-275.5c0-24.813-20.187-45-45-45zm-176.448 437.745h-67.104l6.049-72.245h55.006zm191.448-117.245c0 8.271-6.729 15-15 15h-420c-8.271 0-15-6.729-15-15v-275.5c0-8.271 6.729-15 15-15h420c8.271 0 15 6.729 15 15z" />
             <path
@@ -152,7 +151,8 @@
       </div>
       <div class="box">
         <div class="img-box">
-          <svg height="480pt" viewBox="0 -40 480 479" width="480pt" xmlns="http://www.w3.org/2000/svg">
+          <svg height="480pt" viewBox="0 -40 480 479" width="480pt" xmlns="http://www.w3.org/2000/svg"
+            onclick="window.location.assign('Login.html')">
             <path
               d="m112 311.707031c61.855469 0 112-50.144531 112-112s-50.144531-112-112-112-112 50.144531-112 112c.0664062 61.828125 50.171875 111.933594 112 112zm0-208c53.019531 0 96 42.980469 96 96s-42.980469 96-96 96-96-42.980469-96-96c.058594-52.996093 43.003906-95.941406 96-96zm0 0" />
             <path
@@ -183,7 +183,7 @@
       </div>
       <div class="box">
         <div class="img-box">
-          <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" onclick="window.location.assign('Login.html')">
             <path
               d="m336 336c-5.519531 0-10 4.480469-10 10s4.480469 10 10 10 10-4.480469 10-10-4.480469-10-10-10zm0 0" />
             <path
@@ -220,34 +220,25 @@
           Loan Calculator
         </h2>
       </div>
-      <div class="loancontainer">
-        <div class="loanboxes">
-          <input type="number" class="loanbox" placeholder="Loan Amount in EGP">
-          <input type="number" class="loanbox" placeholder="Loan duration in Months">
-        </div>
-        <div class="loaninfo">
-          <div id="TotalLoanamount" class="Linfo">
-            Total Loan: 0
-          </div>
-          <div id="fixedInterestRate" class="Linfo">
-            Fixed Interest Rate = 0%
-          </div>
-          <div id="TotalInterest" class="Linfo">
-            Total Interest = 0
-          </div>
-          <div id="payment/month" class="Linfo">
-            Payment/month= 0
-          </div>
-        </div>
-      </div>
-      <div class="detail-box">
-        <div class="btn-box">
-          <a href="">
-            View Details
-          </a>
+      <div class="Loan-cont">
+        <div class="Loan-calc">
+          Loan Amount: <input type="number" class="calc" id="loanamount"> <br>
+          Loan Duration: <input type="number" class="calc" id="duration" placeholder="in months"> <br>
+          <input type="radio" name="type" id="personal" value="personal"> Personal Loan </input>
+          <input type="radio" name="type" id="Car" value="car"> Car Loan </input> <br>
+          <button id="Calculate" onclick="calculate()"> Calculate </button>
 
         </div>
+        <div class="Loan-calc-result">
+          <p class="loan-result" id="total-loan"> Total Loan: 0</p>
+          <p class="loan-result" id="Interest Rate"> Interest Rate: 0 </p>
+          <p class="loan-result" id="interest-amount"> Total Interest: 0 </p>
+          <p class="loan-result" id="pay-month"> Payment Per Month: 0</p>
+        </div>
       </div>
+
+    </div>
+    </div>
     </div>
   </section>
   <!-- end about section -->
